SERVER-36260 Share sessionOptions validations between MongoS and MongoD