src/mongo/db/transaction_validation.h
@@ -30,6 +30,7 @@
 
 #pragma once
 
+#include "mongo/db/logical_session_id.h"
 #include "mongo/db/write_concern_options.h"
 
 namespace mongo {
@@ -38,5 +39,18 @@ namespace mongo {
  * Throws if the given write concern is not allowed in a transaction.
  */
 void validateWriteConcernForTransaction(const WriteConcernOptions& wcResult, StringData cmdName);
+
+/**
+ * Returns true if the given command is one of the commands that does not check out a session
+ * regardless of its session options, e.g. two-phase commit commands.
+ */
+bool cmdSkipsSessionCheckout(StringData cmdName);
+
+/**
+ * Throws if the given session options are invalid for the given command and target database.
+ */
+void validateSessionOptions(const OperationSessionInfoFromClient& sessionOptions,
+                            StringData cmdName,
+                            StringData dbname);
 
 }  // namespace mongo
